--- a/DermaCare/DermaCare/Base.lproj/Main.storyboard
+++ b/DermaCare/DermaCare/Base.lproj/Main.storyboard
@@ -350,7 +350,6 @@
                                 </state>
                                 <connections>
                                     <action selector="loginAction:" destination="Kmd-Rg-Zf0" eventType="touchUpInside" id="UYf-Nu-ccb"/>
-                                    <segue destination="YHd-Wt-BOI" kind="show" identifier="loginSegue" id="tDy-zY-87N"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xbe-Qq-lrH">
@@ -433,6 +432,7 @@
                     <connections>
                         <outlet property="emailText" destination="d3T-wz-2Km" id="xo9-Uq-3fh"/>
                         <outlet property="passwordtext" destination="F5n-aS-u5D" id="ax8-HM-qMK"/>
+                        <segue destination="YHd-Wt-BOI" kind="show" identifier="loginSegue" id="4tj-LD-od0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9FR-7B-WmH" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -720,10 +720,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="account" translatesAutoresizingMaskIntoConstraints="NO" id="t4v-LC-iMj">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w6t-bL-xQB">
-                                <rect key="frame" x="142" y="83" width="118" height="23"/>
+                                <rect key="frame" x="142" y="81" width="118" height="23"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.92206512210000002" green="0.93119447970000002" blue="0.93119447970000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -734,7 +734,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Pooja Shah" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pA9-8v-lcO">
-                                <rect key="frame" x="142" y="49" width="146" height="32"/>
+                                <rect key="frame" x="142" y="47" width="146" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                 <color key="textColor" red="0.95401009790000002" green="0.96345574239999998" blue="0.96345574239999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -840,14 +840,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Health Sync" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1a3-eu-M2y">
-                                <rect key="frame" x="142" y="137" width="118" height="21"/>
+                                <rect key="frame" x="142" y="135" width="118" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q8P-0g-wTu">
-                                <rect key="frame" x="288" y="51" width="71" height="30"/>
+                                <rect key="frame" x="288" y="49" width="71" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="LOG OUT">
                                     <color key="titleColor" red="0.95401009790000002" green="0.96345574239999998" blue="0.96345574239999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -858,7 +858,7 @@
                                 </connections>
                             </button>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jk9-lT-xnc">
-                                <rect key="frame" x="266" y="132" width="49" height="31"/>
+                                <rect key="frame" x="266" y="129" width="49" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
                                     <action selector="healthKitSyncSwitch:" destination="VaZ-QR-jAB" eventType="valueChanged" id="2Uq-ba-t3t"/>
@@ -875,7 +875,7 @@
                                 <rect key="frame" x="142" y="108" width="96" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <color key="textColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.99019607843137258" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -894,6 +894,7 @@
                         <outlet property="bpText" destination="DeI-DS-g6q" id="MkY-Ya-gge"/>
                         <outlet property="calText" destination="hxq-F3-4h7" id="nMu-Su-Lpe"/>
                         <outlet property="genderText" destination="yRn-yc-zIf" id="ycK-GI-0UU"/>
+                        <outlet property="healthSyncButton" destination="jk9-lT-xnc" id="3pw-Bf-b6f"/>
                         <outlet property="heartrateText" destination="PK2-dK-0Nw" id="JNy-6C-vHh"/>
                         <outlet property="heightText" destination="KTj-nh-8fQ" id="m9H-XC-0T2"/>
                         <outlet property="temperatureText" destination="rml-U2-Bru" id="HqO-pr-vsD"/>
@@ -1309,9 +1310,8 @@
         <image name="profile" width="381" height="476"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="jRg-cP-MA1"/>
-        <segue reference="BgS-Ry-8OG"/>
-        <segue reference="rzP-il-KUQ"/>
+        <segue reference="4tj-LD-od0"/>
+        <segue reference="v5y-5k-RQJ"/>
         <segue reference="71F-fe-3Jg"/>
         <segue reference="oIa-gA-6ul"/>
         <segue reference="8XC-6Q-Gd5"/>
